# OgreVideoPlugin

./: CMakeLists.txt  README.md
example/: VideoSoundSource.cpp  VideoSoundSource.h
include/: FFmpegPluginPrerequisites.h  FFmpegVideoDecodingThread.h  FFmpegVideoPlayer.h  FFmpegVideoPlugin.h
src/: FFmpegVideoDecodingThread.cpp  FFmpegVideoPlayer.cpp  FFmpegVideoPlugin.cpp  FFmpegVideoPluginDLL.cpp  boost_exception.cpp
